<?xml version="1.0"?>

<package format="2">
  
  <name>beginner_tutorials</name>
  <version>1.0.0</version>
  <description>ENPM808X ROS Services, Logging, and Launch Files</description>
  
  <maintainer email="jmhoward@umd.edu">Jessica Howard</maintainer>
  
  <license>3-Clause BSD</license>
  
  <url type="website">https://github.com/jeshoward/beginner_tutorials/tree/Week10_HW</url>
  
  <author email="jmhoward@umd.edu">Jessica Howard</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build depend>dynamic_reconfigure</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

</package>
