<?xml version="1.0"?>

<package format="2">
  
  <name>beginner_tutorials</name>
  <version>1.0.0</version>
  <description>ENPM808X ROS Services, Logging, and Launch Files</description>
  
  <maintainer email="jmhoward@umd.edu">Jessica Howard</maintainer>
  
  <license>3-Clause BSD</license>
  
  <url type="website">https://github.com/jeshoward/beginner_tutorials/tree/Week10_HW</url>
  
  <author email="jmhoward@umd.edu">Jessica Howard</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>tf</depend>
  <depend>rostest</depend>

</package>
